# typescript-definitions

./: .rusty-hook.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml
src/: lib.rs
typescript-definitions-derive/: Cargo.toml
typescript-definitions-derive/src/: attrs.rs  derive_enum.rs  lib.rs  patch.rs  tests.rs  tots.rs  utils.rs
