[package]
name = "typescript-definitions"
version = "0.1.11"
description = "serde support for exporting Typescript definitions"
readme = "README.md"
authors = ["Tim Ryan <id@timryan.org>", "Sam Rijs <srijs@airpost.net>" , "Ian Castleden <ian.castleden@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/arabidopsis/typescript-definitions"
keywords =["typescript", "serde"]
categories = ["data-structures", "development-tools", "wasm" , "web-programming"]
edition = "2018"
exclude = ['scripts/*', 'templates/*' ]


[dependencies]
serde = "1.0"
typescript-definitions-derive = { version = "0.1.10",  path = "typescript-definitions-derive" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
quote = "1.0"
proc-macro2 = "1.0"
regex = "1"
serde_json = "1.0"
insta = { version="1.7" }
chrono = { version = "0.4", features = ["serde"] }
arrayvec = { version="0.7.0", features = ["serde"] }
# compiletest_rs = "*"
rusty-hook = "0.11.2"

[features]
test = ["typescript-definitions-derive/test"]
export-typescript = ["typescript-definitions-derive/export-typescript"]

# [workspace]
# exclude = ["example"]
