[package]
authors = ["Tim Ryan <id@timryan.org>", "Sam Rijs <srijs@airpost.net>", "Ian Castleden <ian.castleden@gmail.com>"]
categories = ["data-structures", "development-tools", "wasm", "web-programming"]
description = "serde support for exporting Typescript definitions"
edition = "2018"
keywords = ["typescript", "serde"]
license = "MIT/Apache-2.0"
name = "typescript-definitions-derive"
repository = "https://github.com/arabidopsis/typescript-definitions"
version = "0.1.10"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
cfg-if = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
serde_derive_internals = "0.26"
syn = {version = "1.0", features = ["extra-traits"]}

[dev-dependencies]
insta = "1.7"
serde = {version = "1.0", features = ["derive"]}

[features]
export-typescript = []
test = []
type-enum-factories = []
type-enum-handlers = []
